@@ -127,6 +127,9 @@ namespace Avogadro
       void drawTriangle(const Eigen::Vector3d &p1, const Eigen::Vector3d &p2,
                         const Eigen::Vector3d &p3);
 
+      void drawTriangle(const Eigen::Vector3d &p1, const Eigen::Vector3d &p2,
+                        const Eigen::Vector3d &p3, const Eigen::Vector3d &n);
+
       void drawSpline(const QVector<Eigen::Vector3d>& pts, double lineWidth);
 
       /** Draws a shaded sector of a circle.  The sector is defined by three vectors,
