@@ -112,8 +112,11 @@ namespace Avogadro
       virtual void drawMultiLine(const Eigen::Vector3d &start, const Eigen::Vector3d &end,
                                  double lineWidth, int order, short stipple) = 0;
 	
-	  virtual void drawTriangle(const Eigen::Vector3d &p1, const Eigen::Vector3d &p2,
-								const Eigen::Vector3d &p3) = 0;
+      virtual void drawTriangle(const Eigen::Vector3d &p1, const Eigen::Vector3d &p2,
+                                const Eigen::Vector3d &p3) = 0;
+
+      virtual void drawTriangle(const Eigen::Vector3d &p1, const Eigen::Vector3d &p2,
+                                const Eigen::Vector3d &p3, const Eigen::Vector3d &n) = 0;
 
       virtual void drawSpline(const QVector<Eigen::Vector3d>& pts, double radius) = 0;
 
